Fix accidental center alignment for objects in main content

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
 }
 #heading_container {
     color: white;
+    text-shadow: 10px, 0px, rgba(255, 255, 255, 1);
     background-image: url("resources/bg_3.jpg");
     box-shadow: 0px 0px 10px 0px rgb(15, 15, 15);
     background-position: center;
@@ -96,8 +97,22 @@ body {
 
 /* Glassy (V2) Style */
 .button {
+    /*background: rgba(255, 255, 255, 0.2);*/
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 100px; /* rounded corners */
+    padding: 10px 20px;
+    color: white;
+    font-weight: 500;
+    backdrop-filter: blur(8px); /* glass effect */
+    -webkit-backdrop-filter: blur(8px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.button_dark {
     background: rgba(255, 255, 255, 0.2);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 100px; /* rounded corners */
     padding: 10px 20px;
     color: white;
@@ -110,6 +125,11 @@ body {
 }
 
 .button:hover {
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
+}
+
+.button_dark:hover {
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
 }
@@ -122,12 +142,12 @@ hr {
     height: 5px;
     border-radius: 100px;
     width: 100%;
-    background: linear-gradient(to right, #1177ec, #1172f1);
+    background: white;
     border: none;
 }
 
 .item-card {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 20px; /* rounded corners */
     padding: 10px 20px;
